--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
   </head>
 
   <body>
+  
     <script src="uifunctions.js"></script>
     <script src="drawfunctions.js"></script>
     <script src="classes.js"></script>
+    <script src="Asteroid.js"></script>
     <script src="sketch.js"></script>
+
   </body>
 </html>
