Last of the day

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <body>
   
-    <script src="uifunctions.js"></script>
-    <script src="drawfunctions.js"></script>
-    <script src="classes.js"></script>
-    <script src="Asteroid.js"></script>
-    <script src="sketch.js"></script>
+    <script src="uifunctions.js" defer></script>
+    <script src="drawfunctions.js" defer></script>
+    <script src="classes.js" defer></script>
+    <script src="Asteroid.js" defer></script>
+    <script src="sketch.js" defer></script>
 
   </body>
 </html>
