added that new asteroids spawn when we collide with walls

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
   
     <script src="uifunctions.js" defer></script>
+    <script src="tools.js" defer></script>
     <script src="drawfunctions.js" defer></script>
     <script src="classes.js" defer></script>
     <script src="Asteroid.js" defer></script>
